--- a/minggu2/latihan/index.html
+++ b/minggu2/latihan/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <!--eksternal css-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
 
     <!--internal css-->
     <!--<style>
@@ -35,7 +35,7 @@
         perspiciatis ad repellat?
       </p>
     </div>
-
+    <div class="sticky">im sticky!</div>
     <!-- id $ class selector -->
     <div class="container">
       <h1 id="judul1">JUDUL1</h1>
@@ -99,7 +99,7 @@
     </table>
 
     <h2>Float left</h2>
-    <p><div class="img"><img src="assets/img/foto.jpg" ></div>
+    <p><div class="img"><img src="assets/image/foto.jpg" ></div>
       Lorem ipsum dolor sit amet consectetur
       adipisicing elit. Ad placeat cumque libero eius, quasi quod dolore harum
       pariatur incidunt consequatur amet molestiae neque aliquam ipsum tenetur
